3.16/_sources/3d/index.rst.txt


3d
===================================

.. toctree::
   :maxdepth: 4
   :caption: 3d:

   Qgs3D
   Qgs3DAlgorithms
   Qgs3DMapExportSettings
   Qgs3DMapSettings
   Qgs3DTypes
   QgsAbstractMaterialSettings
   QgsAbstractVectorLayer3DRenderer
   QgsCameraPose
   QgsDirectionalLightSettings
   QgsGoochMaterialSettings
   QgsLayoutItem3DMap
   QgsLine3DSymbol
   QgsMaterialContext
   QgsMaterialRegistry
   QgsMaterialSettingsAbstractMetadata
   QgsMaterialSettingsRenderingTechnique
   QgsPhongMaterialSettings
   QgsPhongTexturedMaterialSettings
   QgsPoint3DSymbol
   QgsPointLightSettings
   QgsPolygon3DSymbol
   QgsRuleBased3DRenderer
   QgsRuleBased3DRendererMetadata
   QgsSimpleLineMaterialSettings
   QgsVectorLayer3DRenderer
   QgsVectorLayer3DRendererMetadata
   QgsVectorLayer3DTilingSettings
