3.18/_sources/3d/index.rst.txt


3d
===================================

.. toctree::
   :maxdepth: 4
   :caption: 3d:

   Qgs3D
   Qgs3DAlgorithms
   Qgs3DMapExportSettings
   Qgs3DMapSettings
   Qgs3DTypes
   QgsAbstractMaterialSettings
   QgsAbstractVectorLayer3DRenderer
   QgsCameraPose
   QgsClassificationPointCloud3DSymbol
   QgsColorRampPointCloud3DSymbol
   QgsDirectionalLightSettings
   QgsGoochMaterialSettings
   QgsLayoutItem3DMap
   QgsLine3DSymbol
   QgsMaterialContext
   QgsMaterialRegistry
   QgsMaterialSettingsAbstractMetadata
   QgsMaterialSettingsRenderingTechnique
   QgsNullMaterialSettings
   QgsPhongMaterialSettings
   QgsPhongTexturedMaterialSettings
   QgsPoint3DSymbol
   QgsPointCloud3DSymbol
   QgsPointCloudLayer3DRenderer
   QgsPointLightSettings
   QgsPolygon3DSymbol
   QgsRgbPointCloud3DSymbol
   QgsRuleBased3DRenderer
   QgsRuleBased3DRendererMetadata
   QgsSimpleLineMaterialSettings
   QgsSingleColorPointCloud3DSymbol
   QgsVectorLayer3DRenderer
   QgsVectorLayer3DRendererMetadata
   QgsVectorLayer3DTilingSettings
